scripts/nullaway/annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8.txt
../annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/strategy/StrategyPatternTutorial.java:33: error: [NullAway] dereferenced expression this.learningStrategy is @Nullable
        this.learningStrategy.learn();
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/factory/Theatre.java:47: error: [NullAway] initializer method does not guarantee @NonNull field repertoire (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Theatre(TheatreDirector director) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/bridge/Camera.java:34: error: [NullAway] dereferenced expression this.lightRecorder is @Nullable
        this.lightRecorder.recordLight();
                          ^
    (see http://t.uber.com/nullaway )
../annotator/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:74: error: [NullAway] initializer method does not guarantee @NonNull fields previousStop (line 54), nextStop (line 55) are initialized along all control-flow paths (remember to check for exceptions or early returns).
        public Stop(Station name) {
               ^
    (see http://t.uber.com/nullaway )
4 errors
